--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           git clone https://code.qt.io/qt/qt5.git qt -b '${{env.QT_VERSION}}'
           cd qt
-          perl init-repository.pl -f --module-subset=qtbase,qtmultimedia
+          perl init-repository.pl -f --module-subset=qtbase,qtshadertools,qtmultimedia
 
       - name: Set up MSVC
         uses: ilammy/msvc-dev-cmd@v1
