--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,8 @@ name: Build static Qt
 
 on:
   push:
-    tags:
-      - '*-*' # Only tags with build number
+#    tags:
+#      - '*-*' # Only tags with build number
 permissions:
   contents: write
 
@@ -12,10 +12,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [ windows-latest, macos-latest ]
         include:
-        - os: windows-latest
-          os-caption: windows
+          - os: windows-latest
+            os-caption: windows
 
     runs-on: ${{matrix.os}}
 
